--- a/style/style.css
+++ b/style/style.css
@@ -41,17 +41,22 @@ a {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: contain;
-	box-shadow: 0 0 15px rgba(0,0,0,1);
+	border: solid 1px rgba(255,255,255, 0);
+	box-shadow: 0 0 13px rgba(0,0,0,.7);
 	left: 5%;
 	height: 300px;
 	position: absolute;
 	top: 17%;
 	width: 300px;
-	-webkit-transition: opacity .2s ease;
+	-webkit-transition: all .5s ease;
 }
 
-.canvas .portrait:hover {
-	opacity: .1;
+.canvas .portrait.minimize {
+	border-color: rgba(255,255,255, .2);
+	left: 15px;
+	height: 40px;
+	top: 15px;
+	width: 40px;
 }
 
 .canvas .portrait.hidden {
@@ -110,15 +115,20 @@ a {
 
 .canvas .biography {
 	background-color: rgba(0,0,0,.7);
-	box-shadow: 0 0 6px rgba(255,255,255,.3);
+	box-shadow: 0 0 3px rgba(255,255,255,.3);
 	color: #fff;
 	font-size: 10pt;
 	min-height: 9em;
 	opacity: 0;
 	position: absolute;
-	bottom: 10em;
+	bottom: 2em;
 	width: 100%;
-	-webkit-transition: opacity 4s ease;
+	-webkit-transition: all .5s ease, opacity 4s ease;
+}
+
+.canvas .biography.minimize {
+	bottom: -8em;
+	height: 9em;
 }
 
 .canvas .biography.exists {
@@ -127,6 +137,7 @@ a {
 
 .canvas .biography .content {
 	margin: 2em 4em;
+	-webkit-transition: opacity .5 ease;
 }
 
 @-webkit-keyframes zoom {
