--- a/style/style.css
+++ b/style/style.css
@@ -159,27 +159,45 @@ a {
 }
 
 .canvas .queueFlow > .content {
-	height: 150px;
 	margin: 20px 100px;
 	position: relative;
 	-webkit-perspective: 800px;
+	-webkit-transform-style: preserve-3d;
 }
 
 .canvas .queueFlow > .content .item {
 	position: absolute;
 	width: 0;
-	-webkit-transition: all .5s ease;
 }
 
 .canvas .queueFlow > .content .item .cover {
 	background: #000 url('http://www.kreativsounds.com/uploads/2012/01/Adele-21-Album-Cover.png') center no-repeat;
-	box-shadow: 0 0 8px rgba(0,0,0,.8);
-	height: 150px;
-	left: -75px;
+	background-size: cover;
+	box-shadow: 0 0 8px rgba(0,0,0,.8 );
 	position: absolute;
-	width: 150px;
 }
 
+/* Cover height, width and center offset. */
+.canvas .queueFlow > .content,
+.canvas .queueFlow > .content .item .cover {
+	height: 200px;
+}
+.canvas .queueFlow > .content .item .cover {
+	left: -100px;
+	width: 200px;
+}
+
+.canvas .queueFlow > .content .item .cover .overlay {
+	background: #000;
+	opacity: 1;
+	height: inherit;
+	width: inherit;
+}
+
+.canvas .queueFlow.ready > .content .item,
+.canvas .queueFlow.ready > .content .item .cover .overlay {
+	-webkit-transition: all .5s ease;
+}
 
 @-webkit-keyframes zoom {
 	0% {
