Fix minor flukes.

--- a/style/style.css
+++ b/style/style.css
@@ -163,9 +163,11 @@ a {
 	position: relative;
 	-webkit-perspective: 800px;
 	-webkit-transform-style: preserve-3d;
+
 }
 
 .canvas .queueFlow > .content .item {
+	opacity: 0;
 	position: absolute;
 	width: 0;
 }
@@ -173,7 +175,7 @@ a {
 .canvas .queueFlow > .content .item .cover {
 	background: #000 url('http://www.kreativsounds.com/uploads/2012/01/Adele-21-Album-Cover.png') center no-repeat;
 	background-size: cover;
-	box-shadow: 0 0 8px rgba(0,0,0,.8 );
+	box-shadow: 0 0 16px rgba(0,0,0,1);
 	position: absolute;
 }
 
